force-app/main/default/objects/Enable_Pet_Friendly_Comp__e/Enable_Pet_Friendly_Comp__e.object-meta.xml
<CustomObject>
    <label>Enable Pet Friendly Comp</label>
    <pluralLabel>Enable Pet Friendly Comps</pluralLabel>
</CustomObject>