force-app/main/default/objects/Enable_Pet_Friendly_Comp__e/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <label>Input Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>