force-app/main/default/objects/Enable_Pet_Friendly_Comp__e/fields/isDisablePetHotelPopup__c.field-meta.xml
<CustomField>
    <fullName>isDisablePetHotelPopup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDisablePetHotelPopup</label>
    <type>Checkbox</type>
</CustomField>