force-app/main/default/objects/Enable_Pet_Friendly_Comp__e/fields/PromptResponse__c.field-meta.xml
<CustomField>
    <fullName>PromptResponse__c</fullName>
    <label>PromptResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>